# arnis

./: .gitmodules  ARCHITECTURE.md  CACHE_USAGE.md  CONTEXT_QUICK_REF.md  CONTEXT_SYSTEM.md  Cargo.toml  DISTRIBUTED_DESIGN.md  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ISSUES_ANALYSIS.md  README.md  context.md  copilot-instructions.md
.github/: CONTEXT_UPDATE_TEMPLATE.md
.github/agents/: Beast Mode.agent.md  README.md
.github/scripts/: validate-context.sh
.github/workflows/: ci-build.yml  validate-context.yml
crates/arnis-cli/src/: main.rs
crates/arnis-core/: Cargo.toml
crates/arnis-core/src/: args.rs  asset_cache.rs  data_processing.rs  lib.rs  retrieve_data.rs
crates/arnis-core/src/coordinate_system/geographic/: llbbox.rs  llpoint.rs
crates/arnis-core/src/distributed/: chunking.rs  mod.rs  protocol.rs  work_unit.rs
src/: cpu_info.rs  data_processing.rs  elevation_data.rs  gui.rs  main.rs  perf_config.rs
src/gui/: index.html
