[workspace]
members = ["crates/arnis-cli", "crates/arnis-core"]
resolver = "2"

[workspace.package]
version = "2.3.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/louis-e/arnis"
repository = "https://github.com/louis-e/arnis"

[profile.release]
lto = "thin"
overflow-checks = true
